--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,10 @@ services:
       GAS_TOKEN_CONTRACT_ADDRESS: "0x73c43b919973711e096bfc04c9d4b3be511ffc0b"
       GAS_PORTAL_CONTRACT_ADDRESS: "0xdf25b0a34dbee9f25518f7a4d63bab8b3bb3e496"
       ETHEREUM_HOST:
-      P2P_TCP_LISTEN_PORT: 9000
-      P2P_UDP_LISTEN_PORT: 9001
-      P2P_ANNOUNCE_PORT: 9000
+      P2P_TCP_LISTEN_ADDR: ":9000"
+      P2P_UDP_LISTEN_PORT: ":9001"
+      P2P_TCP_ANNOUNCE_ADDR: ":9000"
+      P2P_UDP_ANNOUNCE_ADDR: ":9001"
       P2P_QUERY_FOR_IP: true
       P2P_ENABLED: true
       PEER_ID_PRIVATE_KEY:
