introduce libdeflate, turned off for wasm

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,5 +14,11 @@
       "localRoot": "${workspaceFolder}",
       "sourceMaps": true
     },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach",
+      "port": 9229
+    }
   ]
 }
