--- a/barretenberg/cpp/src/barretenberg/bb/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/bb/CMakeLists.txt
@@ -6,10 +6,12 @@ if (NOT(FUZZING))
         get_grumpkin_crs.cpp
     )
 
+    # include_directories(${LIBDEFLATE_INCLUDE})
     target_link_libraries(
         bb
         PRIVATE
         barretenberg
         env
+        libdeflate::libdeflate_static
     )
 endif()
