--- a/barretenberg/cpp/CMakeLists.txt
+++ b/barretenberg/cpp/CMakeLists.txt
@@ -27,6 +27,7 @@ endif(DOXYGEN_FOUND)
 
 option(DISABLE_ASM "Disable custom assembly" OFF)
 option(DISABLE_ADX "Disable ADX assembly variant" OFF)
+option(DISABLE_AZTEC_VM "Don't build Aztec VM (acceptable if iterating on core proving)" ON)
 option(MULTITHREADING "Enable multi-threading" ON)
 option(OMP_MULTITHREADING "Enable OMP multi-threading" OFF)
 option(FUZZING "Build ONLY fuzzing harnesses" OFF)
@@ -139,6 +140,11 @@ include(cmake/msgpack.cmake)
 # We do not need to bloat barretenberg.wasm with gzip functionality in a browser context as the browser can do this
 if (NOT WASM)
     include(cmake/libdeflate.cmake)
+else()
+    set(DISABLE_AZTEC_VM ON)
+endif()
+if(DISABLE_AZTEC_VM)
+    add_definitions(-DDISABLE_AZTEC_VM=1)
 endif()
 add_subdirectory(src)
 if (ENABLE_ASAN AND NOT(FUZZING))
