feat: Gas token self deploys
Handles genesis by having gas token deploy itself by minting tokens to
itself in an entrypoint method.

--- a/noir-projects/noir-contracts/contracts/gas_token_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/gas_token_contract/Nargo.toml
@@ -7,3 +7,5 @@ type = "contract"
 [dependencies]
 aztec = { path = "../../../aztec-nr/aztec" }
 authwit = { path = "../../../aztec-nr/authwit" }
+deployer = { path = "../contract_instance_deployer_contract" }
+registerer = { path = "../contract_class_registerer_contract" }
