--- a/yarn-project/txe/package.json
+++ b/yarn-project/txe/package.json
@@ -48,6 +48,8 @@
     ]
   },
   "dependencies": {
+    "@aztec/archiver": "workspace:^",
+    "@aztec/aztec.js": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
     "@aztec/circuits.js": "workspace:^",
     "@aztec/foundation": "workspace:^",
