--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
   changes:
     runs-on: ubuntu-20.04
-    # Required permissions
+    # Required permissions.
     permissions:
       pull-requests: read
     # Set job outputs to values from filter step
