--- a/yarn-project/package.json
+++ b/yarn-project/package.json
@@ -51,6 +51,7 @@
     "sequencer-client",
     "scripts",
     "types",
+    "txe",
     "world-state"
   ],
   "prettier": "@aztec/foundation/prettier",
