--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -158,13 +158,15 @@
     "avm-transpiler/Cargo.toml"
   ],
   "files.watcherExclude": {
-    "**/.git/objects/**": true,
-    "**/.git/subtree-cache/**": true,
+    "**/.git/**": true,
     "**/node_modules/**": true,
     "**/.hg/store/**": true,
     "**/target/**": true,
     "**/l1-contracts/lib/**": true,
-    "**/barretenberg/cpp/build*/**": true
+    "**/barretenberg/cpp/build*/**": true,
+    "**/barretenberg/cpp/src/wasi-sdk*/**": true,
+    "**/dest/**": true,
+    "**/noir/noir-repo/docs/versioned_docs/**": true
   },
   "cmake.sourceDirectory": "${workspaceFolder}/barretenberg/cpp",
   "noir.nargoPath": "./noir/noir-repo/target/release/nargo"
