--- a/docs/package.json
+++ b/docs/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.3.1",
     "netlify-cli": "^17.23.0",
     "nodemon": "^3.0.1",
+    "shelljs": "^0.8.5",
     "typedoc": "^0.25.1",
     "typedoc-plugin-markdown": "^3.16.0",
     "typescript": "^5.0.4"
