--- a/noir/noir-repo/tooling/profiler/Cargo.toml
+++ b/noir/noir-repo/tooling/profiler/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "noir_profiler"
-description = "Analyzer for noir circuits"
+description = "Profiler for noir circuits"
 # x-release-please-start-version
 version = "0.40.0"
 # x-release-please-end
