--- a/yarn-project/txe/tsconfig.json
+++ b/yarn-project/txe/tsconfig.json
@@ -7,13 +7,28 @@
   },
   "references": [
     {
+      "path": "../bb-prover"
+    },
+    {
+      "path": "../builder"
+    },
+    {
       "path": "../circuit-types"
     },
     {
       "path": "../circuits.js"
     },
     {
+      "path": "../ethereum"
+    },
+    {
       "path": "../foundation"
+    },
+    {
+      "path": "../key-store"
+    },
+    {
+      "path": "../kv-store"
     },
     {
       "path": "../noir-protocol-circuits-types"
@@ -22,16 +37,10 @@
       "path": "../protocol-contracts"
     },
     {
+      "path": "../simulator"
+    },
+    {
       "path": "../types"
-    },
-    {
-      "path": "../world-state"
-    },
-    {
-      "path": "../kv-store"
-    },
-    {
-      "path": "../merkle-tree"
     },
     {
       "path": "../noir-contracts.js"
