--- a/yarn-project/txe/package.json
+++ b/yarn-project/txe/package.json
@@ -55,6 +55,7 @@
     "@aztec/foundation": "workspace:^",
     "@aztec/key-store": "workspace:^",
     "@aztec/kv-store": "workspace:^",
+    "@aztec/pxe": "workspace:^",
     "@aztec/simulator": "workspace:^",
     "@aztec/types": "workspace:^",
     "@aztec/world-state": "workspace:^"
