--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -1,17 +1,21 @@
 version: "3"
 services:
-  docs:
-    image: aztecprotocol/docs:${AZTEC_DOCKER_TAG:-latest}
-    entrypoint: >
-      sh -c '
-        yarn test
-      '
+  ethereum:
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
+    command: "'anvil --silent -p 8545 --host 0.0.0.0 --chain-id 31337'"
+    network_mode: host
+
+  aztec:
+    image: aztecprotocol/aztec:${AZTEC_DOCKER_TAG:-latest}
     environment:
-      DEBUG: "aztec:*"
-      DEBUG_COLORS: "true"
       ETHEREUM_HOST: http://ethereum:8545
       CHAIN_ID: 31337
-      PXE_URL: http://aztec:8080
-      BOX: ${BOX:-vanilla}
-      CI: ${CI:-}
-      BROWSER: ${BROWSER:-chromium}
+      ARCHIVER_POLLING_INTERVAL_MS: 50
+      P2P_BLOCK_CHECK_INTERVAL_MS: 50
+      SEQ_TX_POLLING_INTERVAL_MS: 50
+      WS_BLOCK_CHECK_INTERVAL_MS: 50
+      PXE_BLOCK_POLLING_INTERVAL_MS: 50
+      ARCHIVER_VIEM_POLLING_INTERVAL_MS: 500
+    depends_on:
+      - ethereum
+    network_mode: host
