--- a/barretenberg/cpp/src/CMakeLists.txt
+++ b/barretenberg/cpp/src/CMakeLists.txt
@@ -79,7 +79,10 @@ add_subdirectory(barretenberg/translator_vm)
 add_subdirectory(barretenberg/ultra_honk)
 add_subdirectory(barretenberg/vm)
 add_subdirectory(barretenberg/wasi)
-add_subdirectory(barretenberg/db_cli)
+add_subdirectory(barretenberg/world_state)
+add_subdirectory(barretenberg/world_state_service)
+add_subdirectory(barretenberg/messaging)
+add_subdirectory(barretenberg/lmdb_store)
 
 
 if(SMT)
