--- a/iac/mainnet-fork/nginx/nginx.conf
+++ b/iac/mainnet-fork/nginx/nginx.conf
@@ -10,6 +10,7 @@ http {
         # Basic Settings
         ##
 
+        client_max_body_size 20M;
         sendfile on;
         tcp_nopush on;
         tcp_nodelay on;
