--- a/barretenberg/cpp/src/barretenberg/world_state_service/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/world_state_service/CMakeLists.txt
@@ -1,7 +1,6 @@
-add_executable(world_state_service main.cpp)
+if (NOT(FUZZING))
+  add_executable(world_state main.cpp)
 
-target_link_libraries(
-  world_state_service
-  PRIVATE
-  world_state
-)
+  target_link_libraries(world_state PRIVATE messaging)
+
+  endif()
