--- a/yarn-project/prover-client/package.json
+++ b/yarn-project/prover-client/package.json
@@ -55,6 +55,7 @@
     "@aztec/circuits.js": "workspace:^",
     "@aztec/foundation": "workspace:^",
     "@aztec/kv-store": "workspace:^",
+    "@aztec/merkle-trees": "workspace:^",
     "@aztec/noir-protocol-circuits-types": "workspace:^",
     "@aztec/simulator": "workspace:^",
     "@aztec/world-state": "workspace:^",
