--- a/noir-projects/noir-contracts/Nargo.toml
+++ b/noir-projects/noir-contracts/Nargo.toml
@@ -3,6 +3,7 @@ members = [
     "contracts/app_subscription_contract",
     "contracts/auth_contract",
     "contracts/auth_registry_contract",
+    "contracts/auth_wit_test_contract",
     "contracts/avm_initializer_test_contract",
     "contracts/avm_test_contract",
     "contracts/fpc_contract",
