Revert "chore: add arm64 version of aztec-nargo image (#7034)"
This reverts commit 2a41e8415bac26b122c0da2672bf3077aae4eda2.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
           command: cond_spot_run_build noir-packages 32
           aztec_manifest_key: noir-packages
 
-  avm-transpiler-x86_64:
+  avm-transpiler:
     docker:
       - image: aztecprotocol/alpine-build-image
     resource_class: small
@@ -243,31 +243,7 @@ jobs:
           command: cond_spot_run_build avm-transpiler 32
           aztec_manifest_key: avm-transpiler
 
-  avm-transpiler-arm64:
-    docker:
-      - image: aztecprotocol/alpine-build-image
-    resource_class: small
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Build"
-          command: cond_spot_run_build avm-transpiler 32 arm64
-          aztec_manifest_key: avm-transpiler
-
-  avm-transpiler-ecr-manifest:
-    machine:
-      image: default
-    resource_class: medium
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Create ECR manifest"
-          command: create_ecr_manifest avm-transpiler x86_64,arm64
-          aztec_manifest_key: avm-transpiler
-
-  aztec-nargo-x86_64:
+  aztec-nargo:
     docker:
       - image: aztecprotocol/alpine-build-image
     resource_class: small
@@ -277,30 +253,6 @@ jobs:
       - run:
           name: "Build"
           command: cond_spot_run_build aztec-nargo 32
-          aztec_manifest_key: aztec-nargo
-
-  aztec-nargo-arm64:
-    docker:
-      - image: aztecprotocol/alpine-build-image
-    resource_class: small
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Build"
-          command: cond_spot_run_build aztec-nargo 32 arm64
-          aztec_manifest_key: aztec-nargo
-
-  aztec-nargo-ecr-manifest:
-    machine:
-      image: default
-    resource_class: medium
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Create ECR manifest"
-          command: create_ecr_manifest aztec-nargo x86_64,arm64
           aztec_manifest_key: aztec-nargo
 
   l1-contracts:
@@ -558,33 +510,15 @@ workflows:
           <<: *defaults
 
       # Transpiler
-      - avm-transpiler-x86_64:
+      - avm-transpiler:
           requires:
-            - noir-x86_64
-          <<: *defaults
-      - avm-transpiler-arm64:
-          requires:
-            - noir-arm64
-          <<: *defaults
-      - avm-transpiler-ecr-manifest:
-          requires:
-            - avm-transpiler-x86_64
-            - avm-transpiler-arm64
+            - noir-ecr-manifest
           <<: *defaults
 
       # aztec-nargo (nargo & transpiler)
-      - aztec-nargo-x86_64:
+      - aztec-nargo:
           requires:
-            - avm-transpiler-x86_64
-          <<: *defaults
-      - aztec-nargo-arm64:
-          requires:
-            - avm-transpiler-arm64
-          <<: *defaults
-      - aztec-nargo-ecr-manifest:
-          requires:
-            - aztec-nargo-x86_64
-            - aztec-nargo-arm64
+            - avm-transpiler
           <<: *defaults
 
       # Barretenberg
@@ -602,7 +536,7 @@ workflows:
 
       - noir-projects:
           requires:
-            - avm-transpiler-ecr-manifest
+            - avm-transpiler
             - noir-ecr-manifest
           <<: *defaults
 
