--- a/noir/noir-repo/tooling/profiler/Cargo.toml
+++ b/noir/noir-repo/tooling/profiler/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "noir_profiler"
 description = "Profiler for noir circuits"
-# x-release-please-start-version
-version = "0.40.0"
-# x-release-please-end
+version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -17,7 +15,7 @@ name = "noir-profiler"
 path = "src/main.rs"
 
 [dependencies]
-color-eyre = "0.6.2"
+color-eyre.workspace = true
 clap.workspace = true
 nargo.workspace = true
 const_format.workspace = true
@@ -36,9 +34,6 @@ tracing-subscriber.workspace = true
 tracing-appender = "0.2.3"
 
 [dev-dependencies]
-rand = "0.8.5"
-proptest = "1.2.0"
-paste = "1.0.14"
 noirc_abi.workspace = true
 noirc_driver.workspace = true
 tempfile.workspace = true
