--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,31 +231,7 @@ jobs:
           command: cond_spot_run_build noir-packages 32
           aztec_manifest_key: noir-packages
 
-  avm-transpiler-x86_64:
-    docker:
-      - image: aztecprotocol/alpine-build-image
-    resource_class: small
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Build"
-          command: cond_spot_run_build avm-transpiler 32
-          aztec_manifest_key: avm-transpiler
-
-  avm-transpiler-arm64:
-    docker:
-      - image: aztecprotocol/alpine-build-image
-    resource_class: small
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Build"
-          command: cond_spot_run_build avm-transpiler 32 arm64
-          aztec_manifest_key: avm-transpiler
-
-  avm-transpiler-ecr-manifest:
+  avm-transpiler:
     machine:
       image: default
     resource_class: medium
@@ -264,43 +240,19 @@ jobs:
       - *setup_env
       - run:
           name: "Create ECR manifest"
-          command: create_ecr_manifest avm-transpiler x86_64,arm64
+          command: build avm-transpiler
           aztec_manifest_key: avm-transpiler
 
-  aztec-nargo-x86_64:
-    docker:
-      - image: aztecprotocol/alpine-build-image
-    resource_class: small
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Build"
-          command: cond_spot_run_build aztec-nargo 32
-          aztec_manifest_key: aztec-nargo
-
-  aztec-nargo-arm64:
-    docker:
-      - image: aztecprotocol/alpine-build-image
-    resource_class: small
-    steps:
-      - *checkout
-      - *setup_env
-      - run:
-          name: "Build"
-          command: cond_spot_run_build aztec-nargo 32 arm64
-          aztec_manifest_key: aztec-nargo
-
-  aztec-nargo-ecr-manifest:
+  aztec-nargo:
     machine:
       image: default
-    resource_class: medium
+    resource_class: small
     steps:
       - *checkout
       - *setup_env
       - run:
-          name: "Create ECR manifest"
-          command: create_ecr_manifest aztec-nargo x86_64,arm64
+          name: "Build image"
+          command: build aztec-nargo
           aztec_manifest_key: aztec-nargo
 
   l1-contracts:
@@ -559,33 +511,15 @@ workflows:
           <<: *defaults
 
       # Transpiler
-      - avm-transpiler-x86_64:
+      - avm-transpiler:
           requires:
-            - noir-x86_64
-          <<: *defaults
-      - avm-transpiler-arm64:
-          requires:
-            - noir-arm64
-          <<: *defaults
-      - avm-transpiler-ecr-manifest:
-          requires:
-            - avm-transpiler-x86_64
-            - avm-transpiler-arm64
+            - noir-ecr-manifest
           <<: *defaults
 
       # aztec-nargo (nargo & transpiler)
-      - aztec-nargo-x86_64:
+      - aztec-nargo:
           requires:
-            - avm-transpiler-x86_64
-          <<: *defaults
-      - aztec-nargo-arm64:
-          requires:
-            - avm-transpiler-arm64
-          <<: *defaults
-      - aztec-nargo-ecr-manifest:
-          requires:
-            - aztec-nargo-x86_64
-            - aztec-nargo-arm64
+            - avm-transpiler
           <<: *defaults
 
       # Barretenberg
@@ -603,7 +537,7 @@ workflows:
 
       - noir-projects:
           requires:
-            - avm-transpiler-ecr-manifest
+            - avm-transpiler
             - noir-ecr-manifest
           <<: *defaults
 
@@ -649,4 +583,3 @@ workflows:
 
       # Production releases.
       - deploy-and-release: *defaults_deploy
-      
