--- a/yarn-project/aztec-node/tsconfig.json
+++ b/yarn-project/aztec-node/tsconfig.json
@@ -49,6 +49,9 @@
       "path": "../simulator"
     },
     {
+      "path": "../telemetry-client"
+    },
+    {
       "path": "../types"
     },
     {
