--- a/yarn-project/bb-prover/tsconfig.json
+++ b/yarn-project/bb-prover/tsconfig.json
@@ -20,6 +20,9 @@
     },
     {
       "path": "../simulator"
+    },
+    {
+      "path": "../telemetry-client"
     }
   ],
   "include": ["src"]
