--- a/yarn-project/prover-client/tsconfig.json
+++ b/yarn-project/prover-client/tsconfig.json
@@ -28,6 +28,9 @@
       "path": "../simulator"
     },
     {
+      "path": "../telemetry-client"
+    },
+    {
       "path": "../world-state"
     }
   ],
