--- a/yarn-project/package.json
+++ b/yarn-project/package.json
@@ -52,7 +52,8 @@
     "scripts",
     "types",
     "txe",
-    "world-state"
+    "world-state",
+    "telemetry-client"
   ],
   "prettier": "@aztec/foundation/prettier",
   "devDependencies": {
