--- a/yarn-project/txe/tsconfig.json
+++ b/yarn-project/txe/tsconfig.json
@@ -28,6 +28,9 @@
       "path": "../kv-store"
     },
     {
+      "path": "../noir-contracts.js"
+    },
+    {
       "path": "../pxe"
     },
     {
