--- a/yarn-project/merkle-tree/package.json
+++ b/yarn-project/merkle-tree/package.json
@@ -51,6 +51,7 @@
     "@aztec/foundation": "workspace:^",
     "@aztec/kv-store": "workspace:^",
     "@aztec/types": "workspace:^",
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "sha256": "^0.2.0",
     "tslib": "^2.4.0"
   },
