--- a/build_manifest.yml
+++ b/build_manifest.yml
@@ -64,12 +64,13 @@ aztec-nargo:
     - noir
   multiarch: buildx
 
-# Compiles all aztec noir projects using nargo and the avm-transpiler.
+# Compiles all aztec noir projects using nargo and the avm-transpiler. Tests them using the TXE.
 noir-projects:
   buildDir: noir-projects
   dependencies:
     - noir
     - avm-transpiler
+    - yarn-project
 
 # Uses nargo to compile all the noir test programs, used to test bb and bb.js.
 noir-compile-acir-tests:
