--- a/noir-projects/Dockerfile.test
+++ b/noir-projects/Dockerfile.test
@@ -20,13 +20,13 @@ COPY . .
 
 # Build & test
 WORKDIR /usr/src/noir-projects
-RUN cd noir-protocol-circuits && ./bootstrap.sh && nargo test --silence-warnings
+RUN cd noir-protocol-circuits && nargo test --silence-warnings
 
 RUN cd /usr/src/yarn-project/txe && yarn start & echo $! > /tmp/txe.pid && \ 
     # Wait for TXE to initialize
     sleep 5 && \ 
     cd /usr/src/noir-projects/noir-contracts && \
-    ./bootstrap.sh && nargo test --silence-warnings --oracle-resolver http://localhost:8080 ; \
+    nargo test --silence-warnings --oracle-resolver http://localhost:8080 ; \
     kill $(cat /tmp/txe.pid)
 
 RUN cd /usr/src/yarn-project/txe && yarn start & echo $! > /tmp/txe.pid && \ 
